--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spring": "^9.7.1",
     "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
@@ -27,6 +27,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "overrides": {
+    "nth-check": ">=2.0.2",
+    "postcss": ">=8.4.31"
   },
   "eslintConfig": {
     "extends": [
